fix: mapper bug